Temporary fix for preview switch-expressions